--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,16 +16,15 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
 
-    - name: Setup Node
-      uses: actions/setup-node@v3
-      with:
-        node-version: 18
+    - name: Install Bun
+      uses: oven-sh/setup-bun@v1
 
     - name: Install dependencies
-      run: npm install
-
+      run: bun install
+    
     - name: Build project
-      run: npm run build
+      run: bun run build
+
 
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
